# ha-knmi-uv-index

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml
custom_components/knmi_uv_index/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  entity.py  errors.py  manifest.json  models.py  open_meteo.py  parser.py  sensor.py  strings.json
custom_components/knmi_uv_index/translations/: en.json  nl.json
tests/: test_parser.py
tests/fixtures/: zonkrachtverwachting.xml
